Criar Login/Logout e refactor do form de Emprestimos