@@ -2,11 +2,14 @@ package br.ufmg.engsoft.emprestimojogos.service;
 
 import br.ufmg.engsoft.emprestimojogos.domain.Jogo;
 import br.ufmg.engsoft.emprestimojogos.domain.Usuario;
+import br.ufmg.engsoft.emprestimojogos.exceptions.UsuarioInexistenteException;
 import br.ufmg.engsoft.emprestimojogos.repository.JogoBD;
 import br.ufmg.engsoft.emprestimojogos.repository.UsuarioBD;
+import br.ufmg.engsoft.emprestimojogos.session.GerenciadorSessao;
 
 import java.util.InputMismatchException;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 public class UsuarioService {
@@ -35,7 +38,7 @@ public class UsuarioService {
     	List<Usuario> usuarios = UsuarioBD.getInstance().getUsuarios();
     	usuarios = usuarios.stream()
 				.filter(usuario -> usuario.getEmail().equals(email))
-				.collect(Collectors.toList());
+                .toList();
     	
     	if(usuarios.isEmpty()) {
     		throw new InputMismatchException("Usuário não encontrado.");
@@ -48,10 +51,28 @@ public class UsuarioService {
     	List<Jogo> usuarioJogo = JogoBD.getInstance().getJogos();
     	usuarioJogo = usuarioJogo.stream()
     				.filter(jogo -> jogo.getNome().equals(nome) && jogo.getEmailDono().equals(email))
-    				.collect(Collectors.toList());
+                    .toList();
     	
     	if(usuarioJogo.isEmpty()) {
     		throw new InputMismatchException("Este usuário não possui o jogo em questão.");
     	}
+    }
+
+    public void fazerLogin(String email, String senha) {
+        if(email == null || email == ""){
+            throw new InputMismatchException("E-mail incorreto ou faltante");
+        }
+
+        if(senha == null || senha == ""){
+            throw new InputMismatchException("Senha incorreta ou faltante");
+        }
+
+        Optional<Usuario> logado = usuarioBD.getUsuarios().stream().filter(usuario -> usuario.getEmail().equals(email)).findFirst();
+
+        if(logado.isPresent() && logado.get().getSenha().equals(senha)){
+            GerenciadorSessao.getSessao().setUsuarioLogado(logado.get());
+        } else {
+            throw new UsuarioInexistenteException("O e-mail e senha fornecidos não existem para nenhum usuário");
+        }
     }
 }
